# SDK

./: CMakeLists.txt  README.md  changelog.txt  readme.docx  readme.txt
data/dragon2/: Dragon_Head_CM.dds  Dragon_body_CM.dds  dragon2.mtl
data/dragon2_LQ/: Dragon_Head_CM.dds  Dragon_Head_CM.tga  Dragon_body_CM.dds  Dragon_body_CM.tga
documentation/: readme.docx  registry.docx  ~$readme.docx
samples/: CMakeLists.txt
samples/F2/: CMakeLists.txt  DebugGLUtils.cpp  GLApp.cpp  GLApp.h  GLApp.hpp  GLSLBinding.cpp  GLSLBinding.h  GLSLBinding.hpp  GLSLShader.cpp  GLSLShader.h  GLSLShader.hpp  GLWindow.cpp  GLWindow.h  GLWindow.hpp  ModelAndTextureLoader.cpp  ModelAndTextureLoader.h  ModelAndTextureLoader.hpp  RenderManager.cpp  RenderManager.hpp  RenderToTarget.cpp  RenderToTarget.h  Sample.cpp  Sample.h  Sample.hpp  SampleGL.sln  SampleGL.vcproj  SampleGL.vcxproj  SampleGL.vcxproj.filters  UniformRefs.hpp  Utils.cpp  readme.txt  utils.hpp
samples/F2/Ext/gli-0.3.1.0/gli/gtx/: gl_texture2d.inl
samples/F2/Media/: logo.dds
samples/F2/Media/Models/F40/: Dirty.tga  Frnthors.tga  Gear.tga  Panel01.tga
samples/F2/Shaders/: AppendClear.vert  AppendResolve.frag  AppendResolve.vert  BlurPass.frag  OutputNormal.vert  QuadTex.frag  UberShader.frag
samples/F2/data/: Stones_Diffuse.dds  rocks.tga
samples/F2/data/models/F40/: Pirelli2.tga  SIDEHORS.tga
samples/F2/data/shaders/: AppendABuffer.frag  AppendAbuffer.vert  AppendClear.frag  AppendResolve.frag  BlurPass.vert  ComputeSSAO.frag  GlowPass.frag  GlowPass.vert  OutputNormal.frag  QuadTex.vert  ShadowPass.frag  ShadowPass.vert  UberShader.frag  UberShader.vert
samples/cl-transfer-overlap/: CMakeLists.txt  main.cpp  main.hpp
samples/gl-base-vertex/: CMakeLists.txt  ModelAndTextureLoader_V2.cpp  ModelAndTextureLoader_V2.hpp  gl-420-lighting_shader_V2.cpp  main.cpp
samples/gl-base-vertex/data/: lighting.frag  lighting.vert
samples/gl-base-vertex/data/F40/: Belt.tga  Decals.tga  Decals_o.tga  F40.DAE  F40.mtl  F40_OBJ.rar  Frnthors.tga  Glasdark.tga  Horse.tga  Lakerem.tga  Lightfrn.tga  Net.tga  Panel02.tga  Panel03.tga  Pininfar.tga  Pirelli.tga  SIDEHORS.tga  Seatbump.tga  Sidehors2.tga  X.tga
samples/gl-base-vertex/data/batman/: batman.mtl
samples/gl-base-vertex/data/batman/Texture/: BatmanEye_D.tga  BatmanEye_N_2.tga  V2_Batman_Cape_S2.tga
samples/gl-base-vertex/data/dragon2/: dragon2.mtl
samples/gl-base-vertex/data/spider/: SpiderTex.tga  drkwood2.tga  engineflare1.tga  spider.mtl  wal67ar_small.tga  wal69ar_small.tga
samples/gl-buffer-copy/: CMakeLists.txt  ModelAndTextureLoader_V2.cpp  ModelAndTextureLoader_V2.hpp  main.cpp
samples/gl-buffer-copy/data/: lighting.frag
samples/gl-empty-window/: CMakeLists.txt  empty_window.cpp  readme.txt
samples/gl-empty-window/source/: empty_window.cpp
samples/gl-lighting/: CMakeLists.txt  ModelAndTextureLoader.cpp  ModelAndTextureLoader.h  ModelAndTextureLoader.hpp  ModelLoader2.h  gl-420-lighting_shader.cpp  lighting.cpp  main.cpp  readme.txt
samples/gl-lighting/data/: lighting.frag  lighting.vert  specular.tga
samples/gl-lighting/data/teapot/: teapot2.mtl
samples/gl-lighting/source/: ModelLoader2.cpp  lighting.cpp
samples/gl-multi-draw-indirect/: CMakeLists.txt  main.cpp  readme.txt
samples/gl-multi-draw-indirect/data/: multi-draw-indirect.frag  multi-draw-indirect.vert
samples/gl-sparse-texture/: main.cpp
samples/gl-stereo-gs/: CMakeLists.txt  ModelAndTextureLoader.cpp  main.cpp  model_loader.cpp  model_loader.hpp
samples/gl-stereo-gs/data/: StereoGen_frag.glsl  StereoGen_geom.glsl  StereoGen_vertex.glsl  StereoResolve_frag.glsl  StereoResolve_vertex.glsl
samples/gl-terrain-tessellation/: README.docx  terrainTessMain.cpp
samples/gl-terrain-tessellation/data/: tess.cont
samples/gl-tessellation/: CMakeLists.txt  README.txt  main.cpp
samples/gl-tessellation/data/: drawInputMesh.frag  drawInputMesh.vert  tess.cont  tess.eval  tess.frag  tess.vert
samples/gl-textured-cube/: CMakeLists.txt  main.cpp  readme.txt  textured_cube.cpp
samples/gl-textured-cube/data/: logo.tga  textured_cube.frag  textured_cube.vert
samples/gl-textured-cube/sources/: textured_cube.cpp
samples/wgl-10bit/: CMakeLists.txt  main.cpp  readme.txt
samples/wgl-10bit/data/: gradient.frag
samples/wgl-framelock/: main.cpp
